--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,9 +10,11 @@
   border-radius: 5px;
   min-width: 130px;
   background-color: rgb(30, 141, 245);
+  transition: all 0.2s ease-in;
 
   &:hover {
     cursor: pointer;
+    opacity: 0.9;
   }
 }
 
