--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,27 +1,79 @@
 .nt-btn {
-  font-size: 16px;
+  position: relative;
   font-family: inherit;
   outline: none;
   border: none;
-  border: 1px solid rgb(26, 122, 211);
-  color: #fff;
-  padding: 11px 30px;
+  color: inherit;
   border-radius: 5px;
-  min-width: 130px;
-  background-color: rgb(30, 141, 245);
+  padding: 11px 30px;
   transition: all 0.2s ease-in;
+
+  &__primary {
+    background-color: rgb(30, 141, 245);
+  }
+
+  &__secondary {
+    background-color: rgb(243, 61, 55);
+  }
+
+  &__small {
+    font-size: 14px;
+    min-width: 80px;
+  }
+
+  &__medium {
+    min-width: 130px;
+    font-size: 16px;
+  }
+
+  &__large {
+    min-width: 150px;
+    font-size: 18px;
+  }
+
+  &__outline {
+    background: transparent;
+    border: 1px solid rgb(30, 141, 245);
+    color: rgb(30, 141, 245);
+  }
 
   &:hover {
     cursor: pointer;
     opacity: 0.9;
   }
 }
-
-.btn-outline {
-  background: transparent;
-  color: rgb(30, 141, 245);
-}
-
 .round {
   border-radius: 50px;
+}
+
+.fancy {
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    height: 30%;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.17));
+    border-radius: 0 0 5px 5px;
+    pointer-events: none;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 99%;
+    height: 20%;
+    background: linear-gradient(
+      rgba(255, 255, 255, 0.25),
+      rgba(255, 255, 255, 0)
+    );
+    border-radius: 20px 20px 100px 100px / 14px 14px 30px 30px;
+    pointer-events: none;
+  }
 }
