--- a/src/components/Hamburger/Hamburger.scss
+++ b/src/components/Hamburger/Hamburger.scss
@@ -41,14 +41,9 @@
     transform-origin: 50% 90%;
     animation: ReverseSlideUpRotate 0.4s ease-in forwards;
   }
-
-  &__top {
-  }
-
-  &__bottom {
-  }
 }
 
+// Top pipe animations
 @keyframes slideDownRotate {
   0% {
     transform: translateY(0%);
@@ -79,6 +74,8 @@
   }
 }
 
+// Middle animations
+
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
@@ -108,6 +105,8 @@
     transform: rotate(0deg);
   }
 }
+
+// bottom animations
 
 @keyframes slideUpRotate {
   0% {
