--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -9,7 +9,7 @@
   top: 0;
   background-color: #0505051c;
   position: absolute;
-  opacity: 0;
+  // opacity: 0;
 
   &__slide-out--left {
     height: 100%;
