--- a/src/components/Hamburger/Hamburger.scss
+++ b/src/components/Hamburger/Hamburger.scss
@@ -1,8 +1,10 @@
 .hamburger {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: all 0.2s ease-in;
+  z-index: 1000;
 
   &:hover {
     opacity: 0.7;
