--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -1,11 +1,36 @@
 .calendar {
   border: 2px solid black;
   width: fit-content;
+  color: #000;
+  padding: 0 5px 5px 5px;
 
   &__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    height: 40px;
+    padding: 0 5px;
+    color: #7b4efe;
+
+    &__month {
+      display: flex;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 24px;
+      width: 250px;
+    }
+  }
+
+  &__day-of-week {
+    display: grid;
+    grid-template-columns: repeat(7, 50px);
+    justify-items: center;
+    align-content: end;
+    height: 20px;
+
+    &__name {
+      // border: 1px solid red;
+    }
   }
   p {
     margin: unset;
@@ -17,28 +42,37 @@
   grid-template-columns: repeat(7, 50px);
 
   &__day {
-    border: 1px solid rgb(82, 82, 82);
-    box-sizing: border-box;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 50px;
     width: 50px;
 
     &__date {
-      position: absolute;
-      top: 5px;
-      right: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 35px;
+      width: 35px;
+      border-radius: 50px;
+      background: #1be2af;
+      color: #000;
     }
 
     &__date--out {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      color: gray;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 35px;
+      width: 35px;
+      background: #1be2af;
+      border-radius: 50px;
+
+      color: rgb(90, 90, 90);
     }
   }
 }
 
-// global reset styles? where to put them
 button {
   display: flex;
   justify-content: center;
@@ -47,7 +81,3 @@ button {
   border: none;
   padding: 0;
 }
-
-// .icon {
-//   fill: pink;
-// }
