--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -1,7 +1,8 @@
 .calendar {
-  border: 2px solid black;
+  border: 1px solid black;
+  border-radius: 4px;
   width: fit-content;
-  color: #000;
+  color: rgb(0, 0, 0);
   padding: 0 5px 5px 5px;
 
   &__header {
