Add short stack animations

--- a/src/components/Hamburger/Hamburger.scss
+++ b/src/components/Hamburger/Hamburger.scss
@@ -12,14 +12,23 @@
   }
 
   .animate-top {
-    transform-origin: 50% 10%;
+    transform-origin: 24px 9px;
     animation: slideDownRotate 0.4s ease-in forwards;
   }
 
   &__top {
-    transform-origin: 50% 10%;
-    transform: translateY(40%) rotate(45deg);
+    transform-origin: 24px 9px;
+    transform: translateY(150px) rotate(45deg);
     animation: reverseSlideDownRotate 0.4s ease-in forwards;
+  }
+  .animate-top--two {
+    transform-origin: 23px 17px;
+    animation: slideDownRotateTwo 0.4s ease-in forwards;
+  }
+
+  &__top--two {
+    transform-origin: 23px 17px;
+    animation: reverseSlideDownRotateTwo 0.4s ease-in forwards;
   }
 
   .animate-middle {
@@ -34,14 +43,23 @@
   }
 
   .animate-bottom {
-    transform-origin: 50% 90%;
+    transform-origin: 24px 39px;
     animation: slideUpRotate 0.4s ease-in forwards;
   }
 
   &__bottom {
-    transform: translateY(-40%) rotate(-45deg);
-    transform-origin: 50% 90%;
+    transform-origin: 24px 39px;
     animation: ReverseSlideUpRotate 0.4s ease-in forwards;
+  }
+
+  .animate-bottom--two {
+    transform-origin: 25px 32px;
+    animation: slideUpRotateTwo 0.4s ease-in forwards;
+  }
+
+  &__bottom--two {
+    transform-origin: 25px 32px;
+    animation: ReverseSlideUpRotateTwo 0.4s ease-in forwards;
   }
 }
 
@@ -51,25 +69,55 @@
     transform: translateY(0%);
   }
   25% {
-    transform: translateY(40%);
+    transform: translateY(15px);
   }
   50% {
-    transform: translateY(40%);
+    transform: translateY(15px);
   }
   100% {
-    transform: translateY(40%) rotate(45deg);
+    transform: translateY(15px) rotate(45deg);
+  }
+}
+
+@keyframes slideDownRotateTwo {
+  0% {
+    transform: translateY(0%);
+  }
+  25% {
+    transform: translateY(7px);
+  }
+  50% {
+    transform: translateY(7px);
+  }
+  100% {
+    transform: translateY(7px) rotate(45deg);
   }
 }
 
 @keyframes reverseSlideDownRotate {
   0% {
-    transform: translateY(40%) rotate(45deg);
+    transform: translateY(15px) rotate(45deg);
   }
   25% {
-    transform: translateY(40%) rotate(0deg);
+    transform: translateY(15px) rotate(0deg);
   }
   50% {
-    transform: translateY(40%) rotate(0deg);
+    transform: translateY(15px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(0%) rotate(0deg);
+  }
+}
+
+@keyframes reverseSlideDownRotateTwo {
+  0% {
+    transform: translateY(7px) rotate(45deg);
+  }
+  25% {
+    transform: translateY(7px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(7px) rotate(0deg);
   }
   100% {
     transform: translateY(0%) rotate(0deg);
@@ -115,25 +163,55 @@
     transform: translateY(0%);
   }
   25% {
-    transform: translateY(-40%);
+    transform: translateY(-15px);
   }
   50% {
-    transform: translateY(-40%);
+    transform: translateY(-15px);
   }
   100% {
-    transform: translateY(-40%) rotate(-45deg);
+    transform: translateY(-15px) rotate(-45deg);
+  }
+}
+
+@keyframes slideUpRotateTwo {
+  0% {
+    transform: translateY(0%);
+  }
+  25% {
+    transform: translateY(-7px);
+  }
+  50% {
+    transform: translateY(-7px);
+  }
+  100% {
+    transform: translateY(-7px) rotate(-45deg);
   }
 }
 
 @keyframes ReverseSlideUpRotate {
   0% {
-    transform: translateY(-40%) rotate(-45deg);
+    transform: translateY(-15px) rotate(-45deg);
   }
   25% {
-    transform: translateY(-40%) rotate(0deg);
+    transform: translateY(-15px) rotate(0deg);
   }
   50% {
-    transform: translateY(-40%) rotate(0deg);
+    transform: translateY(-15px) rotate(0deg);
+  }
+  100% {
+    transform: translateY(0%) rotate(0deg);
+  }
+}
+
+@keyframes ReverseSlideUpRotateTwo {
+  0% {
+    transform: translateY(-7px) rotate(-45deg);
+  }
+  25% {
+    transform: translateY(-7px) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-7px) rotate(0deg);
   }
   100% {
     transform: translateY(0%) rotate(0deg);
