--- a/src/components/Confetti/Confetti.scss
+++ b/src/components/Confetti/Confetti.scss
@@ -1,7 +1,8 @@
 .confetti {
-  &__icon {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
+  border: 2px solid red;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
