--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,3 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.no-animation {
+  animation-duration: 0s !important;
+}
