--- a/src/components/DarkModeButton/story.styles.scss
+++ b/src/components/DarkModeButton/story.styles.scss
@@ -1,13 +1,31 @@
-.dark-mode-story {
+.dark-mode-demo {
   padding: 20px;
   height: 100vh;
   width: 100%;
   background: #fff;
   transition: all 0.3s ease-out;
+  color: #1f2028;
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 20px 16px;
+    border-bottom: 2px solid #ced1d4;
+  }
+  p {
+    max-width: 700px;
+    line-height: 1.4;
+    margin-left: 20px;
+  }
 }
 
 .dark-mode {
-  .dark-mode-story {
+  .dark-mode-demo {
     background: #1f2028;
+    color: #fff;
+    &__header {
+      border-bottom: 2px solid #4b4c52;
+    }
   }
 }
