--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 .no-animation {
   animation-duration: 0s !important;
 }
