--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -93,3 +93,18 @@
     transform: translateX(0px);
   }
 }
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
