--- a/src/components/ActionButton/ActionButton.scss
+++ b/src/components/ActionButton/ActionButton.scss
@@ -3,6 +3,7 @@
   border-radius: 100%;
   width: fit-content;
   height: fit-content;
+  // border: 2px solid red;
 
   &__progress-ring {
     transform: rotate(-90deg);
@@ -41,5 +42,12 @@
   &__content {
     position: absolute;
     pointer-events: none;
+    // border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // top: 50%;
+    // left: 50%;
   }
 }
