--- a/src/components/CodeBlock/CodeBlock.scss
+++ b/src/components/CodeBlock/CodeBlock.scss
@@ -7,9 +7,11 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    border: 2px solid red;
     right: 0;
     top: 0;
     margin: 8px;
+    color: #fff;
     &__icon {
       margin-left: 16px;
     }
