--- a/src/components/DarkModeButton/story.styles.scss
+++ b/src/components/DarkModeButton/story.styles.scss
@@ -13,7 +13,7 @@
     padding: 0 20px 16px;
     border-bottom: 2px solid #ced1d4;
   }
-  p {
+  &__about {
     max-width: 700px;
     line-height: 1.4;
     margin: 0 0 20px 20px;
