--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,6 +1,37 @@
+.story {
+  &__h1 {
+    margin: 24px 0;
+  }
+  &__p {
+    width: 75%;
+    margin-bottom: 24px;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  &__action-btn {
+    display: flex;
+    align-items: center;
+    background: #fff;
+    height: 200px;
+    border-radius: 4px;
+    padding: 30px;
+  }
+  a {
+    color: rgb(127, 127, 231);
+    text-decoration: none;
+  }
+  &__icon-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 200px);
+    row-gap: 20px;
+  }
+}
+
+// dark mode demo
+
 .dark-mode-demo {
   padding: 20px;
-  height: 100vh;
+  height: fit-content;
   width: 100%;
   background: #fff;
   transition: all 0.3s ease-out;
