--- a/src/styles/_Carousel.scss
+++ b/src/styles/_Carousel.scss
@@ -3,13 +3,20 @@
   position: relative;
   width: 400px;
   overflow: hidden;
+
   &__prev,
   &__next {
+    transition: all 0.2s ease-in;
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
     z-index: 10;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__next {
