--- a/lib/cjs/src/styles/_Input.scss
+++ b/lib/cjs/src/styles/_Input.scss
@@ -1,18 +1,45 @@
 .neat-input {
-  display: flex;
-  flex-direction: column;
+  transition: all 0.15s linear;
+  position: relative;
+  border: 2px solid $cadet-blue-crayola;
+  border-radius: 6px;
   max-width: 300px;
+  &:focus-within {
+    border-color: $blue-green;
+    .neat-input__label {
+      color: $blue-green;
+      transform: translateY(-28px);
+    }
+  }
+
+  legend {
+    margin-left: 12px;
+    width: 0px;
+  }
 
   &__label {
-    font-size: 16px;
-    margin-bottom: 4px;
-    padding-left: 4px;
+    transition: all 0.15s linear;
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    font-size: 12px;
+    transform: translate(2px, -50%) scale(1.2);
+    padding: 0 3px;
+    color: #93a2ac;
+
+    &--with-content {
+      color: $sonic-silver;
+      transform: translateY(-28px);
+    }
   }
 
   &__input {
+    width: 100%;
     height: 40px;
-    border-style: solid;
-    border-radius: 4px;
+    border: none;
+    font-size: 16px;
     padding: 8px 12px;
+    outline: none;
+    border-radius: 6px;
   }
 }
