Add incrementor to the storyline

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./variables";
+@import "./mixins";
 @import "./animations.scss";
 @import "./Switch";
 @import "./Menu";
