Export all progresss

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import "./Button";
 @import "./ActionButton";
 @import "./Incrementor";
+@import "./ProgressRing";
 
 .no-animation {
   animation-duration: 0s !important;
