--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,13 @@
 /*  Blue */
-$midnight-blue: rgba(3, 4, 94, 1);
-$dark-cornflower-blue: rgba(2, 62, 138, 1);
-$star-command-blue: rgba(0, 119, 182, 1);
-$blue-green: rgba(0, 150, 199, 1);
-$pacific-blue: rgba(0, 180, 216, 1);
-$sky-blue-crayola: rgba(72, 202, 228, 1);
-$middle-blue: rgba(144, 224, 239, 1);
-$blizzard-blue: rgba(173, 232, 244, 1);
-$light-cyan: rgba(202, 240, 248, 1);
+$midnight-blue: #03045e;
+$dark-cornflower-blue: #023e8a;
+$star-command-blue: #0077b6;
+$blue-green: #0096c7;
+$pacific-blue: #00b4d8;
+$sky-blue-crayola: #48cae4;
+$middle-blue: #90e0ef;
+$blizzard-blue: #ade8f4;
+$light-cyan: #caf0f8;
 
 /* Gray */
 $cultured: #f8f9faff;
