Add progress bar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@
 @import "./ActionButton";
 @import "./Incrementor";
 @import "./ProgressRing";
+@import "./ProgressBar";
 
 .no-animation {
   animation-duration: 0s !important;
