--- a/lib/cjs/src/styles/index.scss
+++ b/lib/cjs/src/styles/index.scss
@@ -15,6 +15,8 @@
 @import "./Button";
 @import "./ActionButton";
 @import "./Incrementor";
+@import "./ProgressRing";
+@import "./ProgressBar";
 
 .no-animation {
   animation-duration: 0s !important;
