--- a/lib/esm/src/styles/_Input.scss
+++ b/lib/esm/src/styles/_Input.scss
@@ -3,7 +3,7 @@
   position: relative;
   border: 2px solid $cadet-blue-crayola;
   border-radius: 6px;
-  max-width: 300px;
+  width: 100%;
   margin-bottom: 1rem;
   &:focus-within {
     border-color: $blue-green;
@@ -12,10 +12,13 @@
       transform: translateY(-30px);
     }
   }
+  &__error {
+    border-color: #f01c1c;
+    margin-bottom: 2rem;
+  }
 
   legend {
     margin-left: 12px;
-    width: 0px;
   }
 
   &__label {
@@ -24,10 +27,16 @@
     top: 50%;
     left: 12px;
     font-size: 12px;
-    transform: translate(2px, -50%) scale(1.2);
+    transform: scale(1.2) translate(2px, -44%);
+    transform-origin: left;
     padding: 0 3px;
     color: #93a2ac;
-
+    text-align: right;
+    pointer-events: none;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 70%;
     &--with-content {
       color: $sonic-silver;
       transform: translateY(-28px);
@@ -42,5 +51,12 @@
     padding: 8px 12px;
     outline: none;
     border-radius: 6px;
+  }
+
+  &__error-msg {
+    position: absolute;
+    font-size: 14px;
+    bottom: -1.5rem;
+    color: #f01c1c;
   }
 }
