--- a/src/styles/_Menu.scss
+++ b/src/styles/_Menu.scss
@@ -6,10 +6,13 @@
   height: 100vh;
   width: 100%;
   left: 0;
+  right: 0;
+  bottom: 0;
   top: 0;
   background-color: #0505051c;
   position: absolute;
   z-index: 10;
+  overflow: hidden;
 
   &__slide-out--left {
     width: 225px;
