Add initial reduce

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,22 +1,23 @@
-@import "./reset";
-@import "./variables";
-@import "./mixins";
-@import "./animations.scss";
-@import "./Switch";
-@import "./Menu";
-@import "./MasonryGrid";
-@import "./Input";
-@import "./Hamburger";
-@import "./DropDownBox";
-@import "./DarkModeButton";
-@import "./CodeBlock";
-@import "./Carousel";
-@import "./Calendar";
-@import "./Button";
-@import "./ActionButton";
-@import "./Incrementor";
-@import "./ProgressRing";
-@import "./ProgressBar";
+@import './reset';
+@import './variables';
+@import './mixins';
+@import './animations.scss';
+@import './Switch';
+@import './Menu';
+@import './MasonryGrid';
+@import './Input';
+@import './Hamburger';
+@import './DropDownBox';
+@import './DarkModeButton';
+@import './CodeBlock';
+@import './Carousel';
+@import './Calendar';
+@import './Button';
+@import './ActionButton';
+@import './Incrementor';
+@import './ProgressRing';
+@import './ProgressBar';
+@import './Form';
 
 .no-animation {
   animation-duration: 0s !important;
