--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,3 +9,9 @@
   justify-content: center;
   align-content: center;
 }
+
+@mixin flexColumn {
+  display: flex;
+  flex-direction: column;
+  // justify-content: column;
+}
