--- a/src/styles/_Form.scss
+++ b/src/styles/_Form.scss
@@ -7,6 +7,11 @@
   border-radius: 6px;
   overflow-y: scroll;
 
+  &__title {
+    font-size: 28px;
+    margin-bottom: 16px;
+  }
+
   &__btn-container {
     align-self: end;
   }
